# android-rs-snake

./: .gitignore  Cargo.toml  LICENSE  nativeactivity.java  readme.md
fonts/: dummy_file.md
res/: readme.md
src/: main.rs
src/app/: background.rs  counter.rs  mod.rs  pause_screen.rs  touch.rs  util.rs  window_info.rs
src/app/gamestate/: mod.rs  pause_screen.rs
src/app/gamestate/common/: counter.rs  direction.rs  mod.rs  snakeinfo.rs  threading.rs  touch.rs  triangle_cache.rs
src/app/gamestate/one_player/: mod.rs
src/app/gamestate/one_player/snake/: bridge.rs  mod.rs
src/app/gamestate/playerstate/: mod.rs  one_player.rs  two_player.rs
src/app/gamestate/playerstate/snake/: mod.rs
src/app/gamestate/two_player/: mod.rs
src/app/gamestate/two_player/two_snake/: mod.rs  snakeinfo.rs
src/app/snake/: direction.rs  mod.rs
